--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "form-data": "^4.0.1",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "upload-imgbb": "^1.4.0"
   }
 }
